--- a/no320_mdt/no320_mdt-Info.plist
+++ b/no320_mdt/no320_mdt-Info.plist
@@ -22,7 +22,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>NSDocumentClass</key>
-			<string>Document</string>
+			<string>MDDocument</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
