--- a/no320_mdt/no320_mdt-Info.plist
+++ b/no320_mdt/no320_mdt-Info.plist
@@ -30,7 +30,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.inst-hub.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.insthub.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
